# my_edm

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  fctry.csv  oneBoard_partition.csv  platformio.ini  sdkconfig  sdkconfig.old
components/lvgl_esp32_drivers/lvgl_tft/: Kconfig  ili9341.c  st7735s.c  st7735s.h
data/: calib.txt  config.txt  save.txt
esp-idf-component-backup/app_update/: esp_ota_ops.c
esp-idf-component-backup/app_update/include/: esp_ota_ops.h
esp-idf-component-backup/esp_http_client/include/: esp_http_client.h
esp-idf-component-backup/esp_https_ota/include/: esp_https_ota.h
esp-idf-component-backup/esp_https_ota/src/: esp_https_ota.c
include/lvgl/src/misc/: lv_tlsf.c
lib/: lv_conf.h
main/: BLE.cpp  BLE.h  Buttons.cpp  Buttons.h  CMakeLists.txt  IOTComms.cpp  IOTComms.h  Kconfig.projbuild  Motion.cpp  Motion.h  PinDefs.h  System.cpp  System.h  Weight.cpp  Weight.h  _adc.cpp  _adc.h  a_config.h  component.mk  debug.cpp  debug.h  display.cpp  display.h  globals.cpp  globals.h  main.cpp  main.h  myFunctions.h  myOTA.cpp  myOTA.h  mySPIFFS.cpp  mySPIFFS.h  myWiFi.cpp  myWiFi.h  status.h
main/configs/: PinDefs_V1.h  PinDefs_V3.h  PinDefs_V6.h  a_config.h
main/fonts/: montserrat_120.c  montserrat_70.c  montserrat_90.c  vt323_100.c  vt323_120.c  vt323_130.c  vt323_140.c  vt323_70.c  vt323_80.c  vt323_90.c
main/images/: img_battery.c  img_logo_black.c  img_logo_white.c  img_low_battery.c
src/: AWS_OTA.cpp  AWS_OTA.h  Buttons.cpp  Buttons.h  CMakeLists.txt  IOTComms.cpp  IOTComms.h  PinDefs.h  Weight.cpp  Weight.h  a_config.h  debug.cpp  debug.h  display.cpp  display.h  globals.h  main.cpp  myFunctions.h  mySPIFFS.cpp  mySPIFFS.h  myWiFi.cpp  ota_new.cpp
ulp/: button.S  wake_up.S
